migrations to have users and messages

--- a/lib/chat_app_web/controllers/page_html/home.html.heex
+++ b/lib/chat_app_web/controllers/page_html/home.html.heex
@@ -65,7 +65,7 @@
         <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-4 sm:grid-cols-3">
           <a
             href="https://github.com/phoenixframework/phoenix"
-            class="group col-span-3 relative rounded-2xl px-6 py-4 w-full text-sm font-semibold leading-6 text-white sm:py-6"
+            class="group col-span-3 relative rounded-2xl px-6 py-4 w-full text-sm font-semibold leading-6 text-white sm:py-6 shadow-md"
           >
             <span class="absolute inset-0 rounded-2xl bg-gradient-to-br from-orange-400 via-orange-600 to-red-600 transition group-hover:bg-zinc-100 sm:group-hover:scale-105" />
             <span class="relative flex items-center gap-4 text-xl">
