--- a/lib/chat_app_web/controllers/page_html/home.html.heex
+++ b/lib/chat_app_web/controllers/page_html/home.html.heex
@@ -64,7 +64,7 @@
       <div class="w-full sm:w-auto">
         <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-4 sm:grid-cols-3">
           <a
-            href="https://github.com/phoenixframework/phoenix"
+            href="/chat"
             class="group col-span-3 relative rounded-2xl px-6 py-4 w-full text-sm font-semibold leading-6 text-white sm:py-6 shadow-md"
           >
             <span class="absolute inset-0 rounded-2xl bg-gradient-to-br from-orange-400 via-orange-600 to-red-600 transition group-hover:bg-zinc-100 sm:group-hover:scale-105" />
